# bevy-wasm-game

./: .envrc  Cargo.toml  Makefile.toml  build.rs  rust-toolchain.toml  shell.nix
.cargo/: config.toml
.github/workflows/: project_automations.yml
src/: main.rs
