[package]
name = "bevy-tutorial"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png"
]

native = [
  "bevy/bevy_wgpu",
  "bevy/x11"
]

web = [
  "bevy_webgl2",
]

[dependencies]
bevy = { version = "0.5.0", default-features = false }
bevy_webgl2 = { version = "0.5.0", optional = true }
